# ai-learning-intelligence-system

./: .gitignore  app.js
ai-service-layer/: README.md  main.py
ai-service-layer/src/: config.py
backend/: .gitignore  app.js  package.json
backend/controllers/: activityController.js  analyticsController.js  authController.js  dashboardController.js  learningSessionController.js  (+2 more)
browser-extension/: manifest.json  package.json
controllers/: authController.js
models/: Activity.js  User.js
processing-ai-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
processing-ai-service/src/agents/classification/: agent.py
processing-ai-service/src/agents/processing/: agent.py
processing-ai-service/src/api/: classification.py  routes.py
processing-ai-service/src/graphs/: learning_graph.py
processing-ai-service/src/integrations/llm/: providers.py
processing-ai-service/src/models/: classification_result.py  processed_context.py
processing-ai-service/src/nodes/: classification_node.py  fetch_node.py  processing_node.py  router_node.py
processing-ai-service/src/prompts/classification/: system_prompt.py
processing-ai-service/src/prompts/processing/: system_prompt.py
processing-ai-service/src/schemas/: classification_request.py  health.py  learning_session.py
processing-ai-service/src/services/: cache_service.py  classification_service.py  llm_service.py
processing-ai-service/src/state/: learning_state.py
routes/: authRoutes.js  dashboardRoutes.js
services/: analyticsService.js
(+51 files in other folders)
